--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "GrupoFotografico",
-  "version": "0.0.1",
+  "name": "grupo_fotografico_centro",
+  "version": "1.0.2",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -63,5 +63,5 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
   },
-  "description": "An Ionic project"
+  "description": "Grupo Fotografico Centro"
 }
