--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "private": true,
   "dependencies": {
     "@angular/common": "~12.1.1",
-    "@angular/core": "~12.1.1",
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
@@ -26,9 +25,9 @@
     "@capacitor/status-bar": "1.0.3",
     "@ionic/angular": "^6.2.2",
     "ionic-selectable": "^4.8.0",
-    "rxjs": "~6.6.0",
+    "nth-check": "^2.0.1",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.18",
@@ -37,8 +36,8 @@
     "@angular-eslint/eslint-plugin-template": "~12.0.0",
     "@angular-eslint/template-parser": "~12.0.0",
     "@angular/cli": "~12.1.1",
-    "@angular/compiler": "~12.1.1",
-    "@angular/compiler-cli": "~12.1.1",
+    "@angular/compiler": "^12.1.5",
+    "@angular/compiler-cli": "^12.1.5",
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.2.2",
     "@ionic/angular-toolkit": "^2.1.2",
