--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://greenborn.com.ar",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
