--- a/angular/package.json
+++ b/angular/package.json
@@ -11,12 +11,11 @@
   "private": true,
   "dependencies": {
     "@angular/common": "~12.1.1",
+    "@angular/core": "~12.1.1",
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "@angular/core": "~12.1.1",
-    "rxjs": "^6.6.0",
     "@capacitor/app": "1.0.3",
     "@capacitor/core": "3.2.2",
     "@capacitor/haptics": "1.0.3",
@@ -26,8 +25,10 @@
     "axios": "^1.10.0",
     "ionic-selectable": "^4.9.0",
     "nth-check": "^2.1.1",
+    "rxjs": "^6.6.0",
     "tslib": "^2.8.1",
     "webpack": "^5.100.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
