--- a/angular/package.json
+++ b/angular/package.json
@@ -1,12 +1,13 @@
 {
   "name": "grupo_fotografico_centro",
-  "version": "1.3.32",
+  "version": "1.5.0",
   "author": "Greenborn",
   "homepage": "https://greenborn.com.ar",
   "scripts": {
     "ng": "ng",
     "start": "export NODE_OPTIONS=--openssl-legacy-provider && ng serve",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && ng build --configuration production && zip -r gfc_build.zip build"
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && ng build --configuration production && zip -r gfc_build.zip build",
+    "update-version": "node update-version.js"
   },
   "private": true,
   "dependencies": {
