feat: implementar sistema automático de variables de entorno para Angular

--- a/angular/env.example
+++ b/angular/env.example
@@ -2,7 +2,7 @@
 # Copia este archivo como .env y ajusta los valores según tu entorno
 
 # URLs de la API
-API_BASE_URL=https://gfc.prod-api.greenborn.com.ar/
+API_BASE_URL=https://gfc.api.greenborn.com.ar/
 PUBLIC_API_URL=https://gfc.api2.greenborn.com.ar/
 
 # Configuración de autenticación
