--- a/test_vue/env.example
+++ b/test_vue/env.example
@@ -15,3 +15,4 @@ VITE_VERSION=1.1.32
 # Para desarrollo local, puedes usar:
 # VITE_API_BASE_URL=http://localhost:8888/
 # VITE_PUBLIC_API_URL=http://localhost:8888/ 
+VITE_IMAGES_BASE_URL=https://assets.prod-gfc.greenborn.com.ar
