--- a/angular/env.example
+++ b/angular/env.example
@@ -15,3 +15,5 @@ APP_VERSION=1.5.0
 # Para desarrollo local, puedes usar:
 # API_BASE_URL=http://localhost:8888/
 # PUBLIC_API_URL=http://localhost:8888/ 
+
+IMAGES_BASE_URL=https://assets.prod-gfc.greenborn.com.ar 
