--- a/angular/config.env
+++ b/angular/config.env
@@ -6,4 +6,6 @@ API_BASE_URL=https://gfc.prod-api.greenborn.com.ar/
 PUBLIC_API_URL=https://gfc.api2.greenborn.com.ar/
 LOGIN_ACTION=login
 APP_NAME=app_gfc_prod-
-APP_VERSION=1.6.4 
+APP_VERSION=1.7.5
+IMAGES_BASE_URL=https://assets.prod-gfc.greenborn.com.ar 
+NODE_API_BASE_URL = 'https://gfc.api2.greenborn.com.ar/api/'
