--- a/angular/env.example
+++ b/angular/env.example
@@ -4,16 +4,17 @@
 # URLs de la API
 API_BASE_URL=https://gfc.api.greenborn.com.ar/
 PUBLIC_API_URL=https://gfc.api2.greenborn.com.ar/
+NODE_API_BASE_URL=https://gfc.api2.greenborn.com.ar/api/
 
 # Configuración de autenticación
 LOGIN_ACTION=login
 
 # Configuración de la aplicación
 APP_NAME=app_gfc_prod-
-APP_VERSION=1.6.2
+APP_VERSION=1.6.4
 
 # Para desarrollo local, puedes usar:
 # API_BASE_URL=http://localhost:8888/
 # PUBLIC_API_URL=http://localhost:8888/ 
-
+NODE_API_BASE_URL = 'https://gfc.api2.greenborn.com.ar/api/'
 IMAGES_BASE_URL=https://assets.prod-gfc.greenborn.com.ar 
