--- a/angular/config.env
+++ b/angular/config.env
@@ -2,10 +2,10 @@
 # Este archivo se lee automáticamente al hacer build o start
 # Copia este archivo como .env para usar en tu entorno
 
-API_BASE_URL=https://gfc.prod-api.greenborn.com.ar/
-PUBLIC_API_URL=https://gfc.api2.greenborn.com.ar/
+API_BASE_URL=https://gfc.api.greenborn.com.ar/
+PUBLIC_API_URL=https://gfc.api2-dev.greenborn.com.ar/
 LOGIN_ACTION=login
-APP_NAME=app_gfc_prod-
-APP_VERSION=1.8.8
-IMAGES_BASE_URL=https://assets.prod-gfc.greenborn.com.ar 
-NODE_API_BASE_URL = 'https://gfc.api2.greenborn.com.ar/api/'
+APP_NAME=app_gfc_dev-
+APP_VERSION=1.8.9
+IMAGES_BASE_URL=https://assets.dev-gfc.greenborn.com.ar 
+NODE_API_BASE_URL = 'https://gfc.api2-dev.greenborn.com.ar/api/'
