--- a/angular/config.env
+++ b/angular/config.env
@@ -3,9 +3,9 @@
 # Copia este archivo como .env para usar en tu entorno
 
 API_BASE_URL=https://gfc.prod-api.greenborn.com.ar/
-PUBLIC_API_URL=https://gfc.api2.greenborn.com.ar/
+PUBLIC_API_URL=http://localhost:7779/
 LOGIN_ACTION=login
 APP_NAME=app_gfc_prod-
 APP_VERSION=1.8.8
 IMAGES_BASE_URL=https://assets.prod-gfc.greenborn.com.ar 
-NODE_API_BASE_URL = 'https://gfc.api2.greenborn.com.ar/api/'
+NODE_API_BASE_URL = 'http://localhost:7779//'
