--- a/angular/env.example
+++ b/angular/env.example
@@ -3,8 +3,8 @@
 
 # URLs de la API
 API_BASE_URL=https://gfc.api.greenborn.com.ar/
-PUBLIC_API_URL=https://gfc.api2.greenborn.com.ar/
-NODE_API_BASE_URL=https://gfc.api2.greenborn.com.ar/api/
+PUBLIC_API_URL=http://localhost:7779/
+NODE_API_BASE_URL=http://localhost:7779//
 
 # Configuración de autenticación
 LOGIN_ACTION=login
@@ -16,5 +16,5 @@ APP_VERSION=1.8.8
 # Para desarrollo local, puedes usar:
 # API_BASE_URL=http://localhost:8888/
 # PUBLIC_API_URL=http://localhost:8888/ 
-NODE_API_BASE_URL = 'https://gfc.api2.greenborn.com.ar/api/'
+NODE_API_BASE_URL = 'http://localhost:7779//'
 IMAGES_BASE_URL=https://assets.prod-gfc.greenborn.com.ar 
